# mview

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  config.example.toml  docker-compose.yml  qbittorrent.conf
.github/workflows/: deploy.yml
docs/plans/: architecture.md
docs/plans/completed/: 2026-03-27-mview-implementation.md
src/: config.rs  error.rs  main.rs  search.rs
src/anilist/: client.rs  models.rs
src/db/: mod.rs  models.rs  queries.rs
src/plex/: client.rs  mod.rs  organizer.rs
src/qbittorrent/: client.rs
src/rutracker/: auth.rs  client.rs  download.rs  mod.rs  monitor.rs  search.rs  topic.html  topic.rs
src/tasks/: anilist_check.rs  download_monitor.rs  mod.rs  rutracker_check.rs  tmdb_check.rs  torrent_search.rs
src/telegram/: bot.rs  captcha.rs  mod.rs  notifications.rs
src/tmdb/: client.rs  models.rs
src/web/: mod.rs
src/web/routes/: api.rs  captcha.rs  dashboard.rs  discover.rs  mod.rs  search.rs  series.rs  settings.rs
static/: style.css
templates/: base.html  captcha.html  dashboard.html  discover.html  movie.html  search.html  search_results.html  series.html  settings.html
templates/partials/: notification.html  season.html  season_search_results.html  torrent_row.html
