[package]
name = "mview"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
minijinja = { version = "2", features = ["loader"] }
reqwest = { version = "0.12", features = ["cookies", "json", "multipart"] }
scraper = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2_sqlite = "0.25"
r2d2 = "0.8"
teloxide = { version = "0.13", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
urlencoding = "2"
tower-http = { version = "0.6", features = ["fs"] }
futures = "0.3"
regex = "1"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5.3", features = ["util"] }
